--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,19 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="Gray">#808080</color>
+   <color name="Black">	#000000</color>
+    <color name="Red">	#FF0000</color>
+    <color name="Maroon">	#800000</color>
+    <color name="Yellow">	#FFFF00</color>
+   <color name="Olive">	#808000</color>
+    <color name="Lime">	#00FF00</color>
+   <color name="Green">	#008000</color>
+    <color name="Aqua">	#00FFFF</color>
+   <color name="Blue">	#0000FF</color>
+    <color name="Navy">#000080</color>
+  <color name="Fuchsia">#FF00FF</color>
+    <color name="Purple">#800080</color>
+
 </resources>
